8361390: [lworld] Assert during C2 compilation because EA does not properly handle null-free arrays