src/hotspot/share/opto/macro.cpp
@@ -394,7 +394,8 @@ Node *PhaseMacroExpand::value_from_mem_phi(Node *mem, BasicType ft, const Type *
         Node* init_value = alloc->in(AllocateNode::InitValue);
         if (init_value != nullptr) {
           if (val == start_mem) {
-            // TODO 8350865 Somehow we ended up with root mem and therefore walked past the alloc. Fix this. Triggered by TestGenerated::test15
+            // TODO 8350865 Scalar replacement does not work well for flat arrays.
+            // Somehow we ended up with root mem and therefore walked past the alloc. Fix this. Triggered by TestGenerated::test15
             // Don't we need field_value_by_offset?
             return nullptr;
           }
@@ -424,7 +425,8 @@ Node *PhaseMacroExpand::value_from_mem_phi(Node *mem, BasicType ft, const Type *
       } else if (val->is_Proj() && val->in(0) == alloc) {
         Node* init_value = alloc->in(AllocateNode::InitValue);
         if (init_value != nullptr) {
-          // TODO 8350865 Is this correct for non-all-zero init values? Don't we need field_value_by_offset?
+          // TODO 8350865 Scalar replacement does not work well for flat arrays.
+          // Is this correct for non-all-zero init values? Don't we need field_value_by_offset?
           values.at_put(j, init_value);
         } else {
           assert(alloc->in(AllocateNode::RawInitValue) == nullptr, "init value may not be null");
